--- a/ansible/roles/ingestion/tasks/configure_ingestion.yml
+++ b/ansible/roles/ingestion/tasks/configure_ingestion.yml
@@ -23,8 +23,8 @@
       DB_NAME = "{{ db_name }}"
       NIFI_IP = 'nifi_app'
       NIFI_PORT = 8096
-      URL = "https://{{ api_endpoint }}"
-      WRK_DIR_PYTHON = '/python_files'
+      URL = "http://{{ api_endpoint }}"
+      WRK_DIR_PYTHON = '/python_files/transformer_generator/transformers/'
       PYTHON_PATH = '/usr/bin/python3.7'
       FLASKAPI = 'http://flask_app'
       FLASK_PORT = 3003
