--- a/ansible/roles/spec/tasks/configure_spec.yml
+++ b/ansible/roles/spec/tasks/configure_spec.yml
@@ -34,6 +34,7 @@
       PYTHON_PATH = '/usr/bin/python3.7'
       FLASKAPI = 'http://flask_app'
       FLASK_PORT = 3003
-      AWS_ACCESS_KEY = "{{ aws_acess_key }}"
+      AWS_ACCESS_KEY = "{{ aws_access_key }}"
       AWS_SECRET_KEY = "{{ aws_secret_key }}"
-      PROCESS_BUCKET= "{{ s3_processing_bucket }}"
+      ARCHIVED_BUCKET= "{{ s3_archived_bucket }}"
+      ERROR_BUCKET= "{{ s3_error_bucket }}"
