--- a/ansible/roles/spec/tasks/configure_spec.yml
+++ b/ansible/roles/spec/tasks/configure_spec.yml
@@ -32,7 +32,7 @@
       URL = "http://{{ api_endpoint }}"
       WRK_DIR_PYTHON = '/generator_data/transformer_generator/transformers/python_files'
       PYTHON_PATH = '/usr/bin/python3.7'
-      FLASKAPI = 'http://flask_app'
+      FLASKAPI = 'http://generator_app'
       FLASK_PORT = 3003
       AWS_ACCESS_KEY = "{{ aws_access_key }}"
       AWS_SECRET_KEY = "{{ aws_secret_key }}"
