added time zone in nifi-ms

--- a/microservices/nifi-ms/Dockerfile
+++ b/microservices/nifi-ms/Dockerfile
@@ -3,3 +3,5 @@ USER root
 RUN mkdir /generator_data /processing_data /archived_data
 
 RUN apt-get --allow-releaseinfo-change-suite update && apt-get update -y && apt-get install python3.7 -y && apt-get install python3-pip -y
+
+RUN sudo echo "java.arg.8=-Duser.timezone=Asia/Kolkata" >> conf/bootstrap.conf"
