azure support added

--- a/ansible/roles/ingestion/tasks/configure_ingestion.yml
+++ b/ansible/roles/ingestion/tasks/configure_ingestion.yml
@@ -12,7 +12,7 @@
     mode: u+rw,g+rw,o+rw
   tags: [ install, update ]
 
-- name: Loading required data inside .env file
+- name: Loading required data inside .env file (aws storage)
   blockinfile:
     path: ../microservices/ingestion-ms/.env
     block: |
@@ -30,10 +30,10 @@
       AWS_SECRET_KEY = "{{ aws_secret_key }}"
       ARCHIVED_BUCKET= "{{ s3_archived_bucket }}"
       ERROR_BUCKET= "{{ s3_error_bucket }}"
-  when: mode_of_installation != "localhost"
+  when: storage_type == "aws"
   tags: [ install, update ]
 
-- name: Loading required data inside .env file
+- name: Loading required data inside .env file (local storage)
   blockinfile:
     path: ../microservices/ingestion-ms/.env
     block: |
@@ -49,5 +49,26 @@
       PYTHON_PATH = '/usr/bin/python3.7'
       ARCHIVED_DIRECTORY= "{{ local_archived_dir }}"
       ERROR_DIRECTORY= "{{ local_error_dir }}"
-  when: mode_of_installation == "localhost"
+  when: storage_type == "local"
+  tags: [ install, update ]
+
+- name: Loading required data inside .env file (azure storage)
+  blockinfile:
+    path: ../microservices/ingestion-ms/.env
+    block: |
+      DB_HOST = 'postgres_app'
+      DB_PORT = 5432
+      DB_USERNAME = "{{ db_user }}"
+      DB_PASSWORD = "{{ db_password }}"
+      DB_NAME = "{{ db_name }}"
+      NIFI_HOST = 'http://nifi_app'
+      NIFI_PORT = 8096
+      URL = 'http://{{ api_endpoint }}/api'
+      WRK_DIR_PYTHON = '/generator_data/generators/transformers/python_files'
+      PYTHON_PATH = '/usr/bin/python3.7'
+      AZURE_STORAGE_CONN_STR = "{{ azure_storage_connection_string }}"
+      AZURE_OUTPUT_STORAGE = "{{ azure_output_container }}"
+      AZURE_ARCHIVED_STORAGE = "{{ azure_archived_container }}"
+      AZURE_ERROR_STORAGE = "{{ azure_error_container }}"
+  when: storage_type == "azure"
   tags: [ install, update ]
