--- a/ansible/roles/generator/tasks/configure_generator.yml
+++ b/ansible/roles/generator/tasks/configure_generator.yml
@@ -1,13 +1,20 @@
-- name: copying database config to generator folder
+- name: copying database config to generator folder (aws storage)
   template:
-    src: config.ini.j2
+    src: config.ini_aws.j2
     dest: "../microservices/generator-ms/config.ini"
-  when: mode_of_installation != "localhost"
+  when: storage_type == "aws"
   tags: [ install, update ]
 
-- name: copying database config to generator folder
+- name: copying database config to generator folder (local storage)
   template:
     src: config.ini_local.j2
+    dest: "../microservices/generator-ms/config.ini"
+  when: mode_of_installation == "localhost"
+  tags: [ install, update ]
+
+- name: copying database config to generator folder (azure storage)
+  template:
+    src: config.ini_azure.j2
     dest: "../microservices/generator-ms/config.ini"
   when: mode_of_installation == "localhost"
   tags: [ install, update ]
