--- a/ansible/roles/spec/tasks/configure_spec.yml
+++ b/ansible/roles/spec/tasks/configure_spec.yml
@@ -37,7 +37,7 @@
       AWS_SECRET_KEY = "{{ aws_secret_key }}"
       ARCHIVED_BUCKET= "{{ s3_archived_bucket }}"
       ERROR_BUCKET= "{{ s3_error_bucket }}"
-  when: mode_of_installation != "localhost"
+  when: storage_type == "aws"
   tags: [ install, update ]
 
 - name: Loading required data inside .env file
@@ -57,5 +57,27 @@
       PYTHON_PATH = '/usr/bin/python3.7'
       ARCHIVED_DIRECTORY= "{{ local_archived_dir }}"
       ERROR_DIRECTORY= "{{ local_error_dir }}"
-  when: mode_of_installation == "localhost"
+  when: storage_type == "local"
+  tags: [ install, update ]
+
+- name: Loading required data inside .env file (azure storage)
+  blockinfile:
+    path: ../microservices/ingestion-ms/.env
+    block: |
+      DB_HOST = 'postgres_app'
+      DB_PORT = 5432
+      DB_USERNAME = "{{ db_user }}"
+      DB_PASSWORD = "{{ db_password }}"
+      DB_NAME = "{{ db_name }}"
+      NIFI_HOST = 'http://nifi_app'
+      NIFI_PORT = 8096
+      GENERATOR_HOST = 'http://generator_app'
+      GENERATOR_PORT = 3003
+      WRK_DIR_PYTHON = '/generator_data/generators/transformers/python_files'
+      PYTHON_PATH = '/usr/bin/python3.7'
+      AZURE_STORAGE_CONN_STR = "{{ azure_storage_connection_string }}"
+      AZURE_OUTPUT_STORAGE = "{{ azure_output_container }}"
+      AZURE_ARCHIVED_STORAGE = "{{ azure_archived_container }}"
+      AZURE_ERROR_STORAGE = "{{ azure_error_container }}"
+  when: storage_type == "azure"
   tags: [ install, update ]
