env changes for ingestion and query build

--- a/ansible/roles/querybuilder/tasks/configure_querybuilder.yml
+++ b/ansible/roles/querybuilder/tasks/configure_querybuilder.yml
@@ -9,6 +9,7 @@
   blockinfile:
     path: ../microservices/query-builder/.env
     block: |
+      JWT_SECRET= 'cqube_secret'
       DB_HOST = 'postgres_app'
       DB_PORT = 5432
       DB_USERNAME = "{{ db_user }}"
