modified tags of installation and upgradation

--- a/ansible/roles/dashboard/tasks/main.yml
+++ b/ansible/roles/dashboard/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - include_tasks: configure_dashboard.yml
-  tags: install
+  tags: [ install, update ]
 
 - include_tasks: build_dashboard.yml
-  tags: install
+  tags: [ install, update ]
