--- a/ansible/roles/postgres/tasks/main.yml
+++ b/ansible/roles/postgres/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - include_tasks: configure_postgres.yml
-  tags: install
+  tags: [ install, update ]
 
 - include_tasks: build_postgres.yml
-  tags: install
+  tags: [ install, update ]
