--- a/ansible/roles/querybuilder/tasks/main.yml
+++ b/ansible/roles/querybuilder/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - include_tasks: configure_querybuilder.yml
-  tags: install
+  tags: [ install, update ]
 
 - include_tasks: build_querybuilder.yml
-  tags: install
+  tags: [ install, update ]
 
