--- a/ansible/roles/spec/tasks/main.yml
+++ b/ansible/roles/spec/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - include_tasks: configure_spec.yml
-  tags: install
+  tags: [ install, update ]
 
 - include_tasks: build_spec.yml
-  tags: install
+  tags: [ install, update ]
 
