--- a/ansible/install.yml
+++ b/ansible/install.yml
@@ -14,6 +14,7 @@
           - python
           - ingestion
           - spec
+          - grammar
           - generator
           - dashboard
           - querybuilder
