--- a/ansible/roles/configurations/tasks/configure_base_dir.yml
+++ b/ansible/roles/configurations/tasks/configure_base_dir.yml
@@ -19,7 +19,7 @@
 
 - name: Copying the config.yml file as base_config.yml
   copy:
-    src: config.yml
+    src: ../config.yml
     dest: "{{ base_dir }}/cqube/conf/base_config.yml"
     mode: '0644'
     owner: "{{ system_user_name }}"
@@ -28,7 +28,7 @@
 
 - name: Copying the config.yml file as base_config.yml
   copy:
-    src: upgradation_config.yml
+    src: ../upgradation_config.yml
     dest: "{{ base_dir }}/cqube/conf/base_config.yml"
     mode: '0644'
     owner: "{{ system_user_name }}"
@@ -37,7 +37,7 @@
 
 - name: Copying the program_selector.yml file as program_selecor.yml
   copy:
-    src: program_selector.yml
+    src: ../program_selector.yml
     dest: "{{ base_dir }}/cqube/conf/program_selector.yml"
     mode: '0644'
     owner: "{{ system_user_name }}"
