--- a/ansible/upgrade.yml
+++ b/ansible/upgrade.yml
@@ -14,6 +14,7 @@
           - python
           - ingestion
           - spec
+          - grammar
           - generator
           - dashboard
           - querybuilder
