--- a/microservices/nifi-ms/Dockerfile
+++ b/microservices/nifi-ms/Dockerfile
@@ -2,6 +2,8 @@ FROM apache/nifi:1.12.1
 USER root
 RUN mkdir /generator_data /processing_data /archived_data
 
+COPY cqube-ingest.sh .
+
 RUN apt-get --allow-releaseinfo-change-suite update && apt-get update -y && apt-get install python3.7 -y && apt-get install python3-pip -y
 
 RUN rm -rf conf/bootstrap.conf
