added node dependencies in nifi

--- a/microservices/nifi-ms/Dockerfile
+++ b/microservices/nifi-ms/Dockerfile
@@ -1,6 +1,10 @@
 FROM apache/nifi:1.12.1
 USER root
 RUN mkdir /generator_data /processing_data /archived_data
+RUN apt-get update -y
+RUN apt-get install curl -y
+RUN curl -sL https://deb.nodesource.com/setup_4.x | bash
+RUN apt-get install nodejs
 
 COPY cqube-ingest.sh .
 
