--- a/microservices/nifi-ms/Dockerfile
+++ b/microservices/nifi-ms/Dockerfile
@@ -5,7 +5,7 @@ RUN mkdir /generator_data /processing_data /archived_data
 COPY cqube-ingest.sh .
 
 RUN apt-get --allow-releaseinfo-change-suite update && apt-get update -y && apt-get install python3.7 -y && apt-get install python3-pip -y
-RUN apt-get update -y && apt-get install curl -y && curl -sL https://deb.nodesource.com/setup_16.x | bash && apt-get install nodejs -y
+RUN apt-get update -y && apt-get install curl -y && curl -sL https://deb.nodesource.com/setup_16.x | bash && apt-get install nodejs -y && npm install --global yarn -y
 
 RUN rm -rf conf/bootstrap.conf
 
