--- a/microservices/python-ms/requirements.txt
+++ b/microservices/python-ms/requirements.txt
@@ -1,4 +1,4 @@
-boto3==1.13.16
+boto3
 Flask==1.1.2
 Flask-AppBuilder==2.2.2
 Flask-Caching==1.8.0
@@ -12,3 +12,6 @@ python3-openid==3.1.0
 NumPy
 pandas
 requests
+configparser
+azure-storage-blob
+boto3
