changes for mode of installation as public

--- a/ansible/install.yml
+++ b/ansible/install.yml
@@ -5,8 +5,11 @@
   remote_user: root
   become: true
   vars_files:
-    - ../config.yml
-    - ../program_selector.yml
+    - ../config_files/config.yml
+    - ../config_files/program_selector.yml
+    - ../config_files/aws_s3_config.yml
+    - ../config_files/azure_container_config.yml
+    - ../config_files/local_storage_config.yml
 
   roles:
           - configurations
