--- a/ansible/upgrade_compose.yml
+++ b/ansible/upgrade_compose.yml
@@ -5,6 +5,10 @@
   gather_facts: no
   vars_files:
     - ../upgradation_config.yml
+    - ../upgradation_azure_container_config.yml
+    - ../upgradation_aws_s3_config.yml
+    - ../upgradation_local_storage_config.yml
+
 
   roles:
          - compose
