upgradation code modification

--- a/ansible/remote_sanity.yml
+++ b/ansible/remote_sanity.yml
@@ -5,7 +5,7 @@
   remote_user: root
   become: true
   vars_files:
-    - ../upgradation_config.yml
+    - ../config_files/upgradation_config.yml
 
   roles:
           - remote_sanity
