--- a/ansible/roles/configurations/tasks/configure_base_dir.yml
+++ b/ansible/roles/configurations/tasks/configure_base_dir.yml
@@ -55,7 +55,7 @@
 
 - name: Copying the config.yml file as base_config.yml
   copy:
-    src: ../upgradation_config.yml
+    src: ../config_files/upgradation_config.yml
     dest: "{{ base_dir }}/cqube/conf/base_config.yml"
     mode: '0644'
     owner: "{{ system_user_name }}"
