--- a/ansible/install.yml
+++ b/ansible/install.yml
@@ -15,6 +15,7 @@
           - configurations
           - postgres 
           - python
+          - keycloak  
           - ingestion
           - spec
           - generator
