--- a/ansible/roles/configurations/tasks/main.yml
+++ b/ansible/roles/configurations/tasks/main.yml
@@ -7,3 +7,7 @@
 
 - include_tasks: configure_program_selector.yml
   tags: [ install, update ]  
+
+- include_tasks: keycloak.yml
+  tags: [ install, update ]
+
