minio bucket name changed

--- a/ansible/roles/querybuilder/tasks/configure_querybuilder.yml
+++ b/ansible/roles/querybuilder/tasks/configure_querybuilder.yml
@@ -22,7 +22,7 @@
       AWS_SECRET_KEY = "{{ aws_secret_key }}"
       S3_BUCKET= "{{ s3_bucket }}"
       AWS_BUCKET_REGION= 'ap-south-1'
-      MINIO_END_POINT = '{{ minio_ip_address }}'
+      MINIO_END_POINT = "{{ minio_ip_address }}"
       MINIO_PORT = 9000
       MINIO_ACCESS_KEY = "{{ minio_username }}"
       MINIO_SECRET_KEY = "{{ minio_password }}"
@@ -55,7 +55,7 @@
       AWS_SECRET_KEY = "{{ aws_secret_key }}"
       S3_BUCKET= "{{ s3_bucket }}"
       AWS_BUCKET_REGION= 'ap-south-1'
-      MINIO_END_POINT = '{{ minio_ip_address }}'
+      MINIO_END_POINT = "{{ minio_ip_address }}"
       MINIO_PORT = 9000
       MINIO_ACCESS_KEY = "{{ minio_username }}"
       MINIO_SECRET_KEY = "{{ minio_password }}"
