--- a/ansible/roles/generator/tasks/configure_processor_group.yml
+++ b/ansible/roles/generator/tasks/configure_processor_group.yml
@@ -18,3 +18,11 @@
     dest: "../microservices/generator-ms/static_processor_group/config.ini"
   when: storage_type == "azure"
   tags: [ install, update ]
+
+- name: copying database config to generator folder (oracle storage)
+  template:
+    src: config.ini_pg_oracle.j2
+    dest: "../microservices/generator-ms/static_processor_group/config.ini"
+  when: storage_type == "oracle"
+  tags: [ install, update ]
+  
