--- a/ansible/roles/querybuilder/tasks/configure_querybuilder.yml
+++ b/ansible/roles/querybuilder/tasks/configure_querybuilder.yml
@@ -35,6 +35,7 @@
       REALM = 'cQube'
       KEY_CLOAK_CLIENT_ID = 'cqube-5.0'
       KEY_CLOAK_SECRET = 'd0b8122f-8dfb-46h7-b69a-f5cc4e25d000'
+      ORACLE_BUCKET = "{{ oracle_bucket }}"
   when: mode_of_installation != "localhost"   
   tags: [ install, update ]
 
@@ -68,5 +69,6 @@
       REALM = 'cQube'
       KEY_CLOAK_CLIENT_ID = 'cqube-5.0'
       KEY_CLOAK_SECRET = 'd0b8122f-8dfb-46h7-b69a-f5cc4e25d000'
+      ORACLE_BUCKET = "{{ oracle_bucket }}"
   when: mode_of_installation == "localhost"
   tags: [ install, update ]
