--- a/ansible/roles/nifi/tasks/configure_nifi.yml
+++ b/ansible/roles/nifi/tasks/configure_nifi.yml
@@ -10,6 +10,15 @@
     dest: "../microservices/nifi-ms/cqube-ingest-install.sh"
   tags: [ install, update ]
 
+- name: Creating oracle directory
+  file:
+    path: "../microservices/nifi-ms/oracle"
+    owner: "{{ system_user_name }}"
+    group: "{{ system_user_name }}"
+    recurse: yes
+    state: directory
+  tags: [install, update]
+
 - name: copying oracle.sh configuration script to nifi ms
   template:
     src: oracle-connect.sh.j2
