--- a/ansible/upgrade.yml
+++ b/ansible/upgrade.yml
@@ -9,6 +9,7 @@
     - ../config_files/upgradation_azure_container_config.yml
     - ../config_files/upgradation_aws_s3_config.yml
     - ../config_files/upgradation_local_storage_config.yml
+    - ../config_files/upgradation_oracle_storage_config.yml
     - ../config_files/program_selector.yml
 
   roles:
