--- a/ansible/install.yml
+++ b/ansible/install.yml
@@ -11,6 +11,7 @@
     - ../config_files/azure_container_config.yml
     - ../config_files/local_storage_config.yml
     - ../config_files/oracle_storage_config.yml
+    - ../.version
 
   roles:
           - configurations
@@ -24,3 +25,4 @@
           - querybuilder
           - nifi
           - nginx
+          - cqube_version
