--- a/ansible/upgrade.yml
+++ b/ansible/upgrade.yml
@@ -10,6 +10,8 @@
     - ../config_files/upgradation_aws_s3_config.yml
     - ../config_files/upgradation_local_storage_config.yml
     - ../config_files/program_selector.yml
+    - ../config_files/upgradation_oracle_storage_config.yml
+    - ../.version
 
   roles:
           - configurations
