--- a/ansible/upgrade_compose.yml
+++ b/ansible/upgrade_compose.yml
@@ -8,7 +8,7 @@
     - ../config_files/upgradation_azure_container_config.yml
     - ../config_files/upgradation_aws_s3_config.yml
     - ../config_files/upgradation_local_storage_config.yml
-
+    - ../config_files/upgradation_oracle_storage_config.yml
 
   roles:
          - compose
