--- a/ansible/roles/generator/tasks/configure_generator.yml
+++ b/ansible/roles/generator/tasks/configure_generator.yml
@@ -5,11 +5,40 @@
   when: storage_type == "aws"
   tags: [ install, update ]
 
+- name: copying database config to generator folder (aws storage)
+  template:
+    src: config.ini_aws.j2
+    dest: "../microservices/generator-ms/adapter/VSK/config.ini"
+  when: access_type == "VSK"
+  tags: [ install, update ]
+
+- name: copying database config to generator folder (aws storage)
+  template:
+    src: config.ini_aws.j2
+    dest: "../microservices/generator-ms/adapter/NVSK/config.ini"
+  when: access_type == "NVSK"
+  tags: [ install, update ]
+
+
 - name: copying database config to generator folder (local storage)
   template:
     src: config.ini_local.j2
     dest: "../microservices/generator-ms/adapter/config.ini"
   when: storage_type == "local"
+  tags: [ install, update ]
+
+- name: copying database config to generator folder (local storage)
+  template:
+    src: config.ini_local.j2
+    dest: "../microservices/generator-ms/adapter/VSK/config.ini"
+  when: access_type == "VSK"
+  tags: [ install, update ]
+
+- name: copying database config to generator folder (local storage)
+  template:
+    src: config.ini_local.j2
+    dest: "../microservices/generator-ms/adapter/NVSK/config.ini"
+  when: access_type == "NVSK"
   tags: [ install, update ]
 
 - name: copying database config to generator folder (azure storage)
@@ -19,6 +48,19 @@
   when: storage_type == "azure"
   tags: [ install, update ]
 
+- name: copying database config to generator folder (azure storage)
+  template:
+    src: config.ini_azure.j2
+    dest: "../microservices/generator-ms/adapter/NVSK/config.ini"
+  when: access_type == "VSK"
+  tags: [ install, update ]
+
+- name: copying database config to generator folder (azure storage)
+  template:
+    src: config.ini_azure.j2
+    dest: "../microservices/generator-ms/adapter/VSK/config.ini"
+  when: access_type == "NVSK"
+  tags: [ install, update ]
 
 - name: copying database config to generator folder (oracle storage)
   template:
@@ -26,3 +68,18 @@
     dest: "../microservices/generator-ms/adapter/config.ini"
   when: storage_type == "oracle"
   tags: [ install, update ]
+
+- name: copying database config to generator folder (oracle storage)
+  template:
+    src: config.ini_oracle.j2
+    dest: "../microservices/generator-ms/adapter/VSK/config.ini"
+  when: access_type == "VSK"
+  tags: [ install, update ]
+
+- name: copying database config to generator folder (oracle storage)
+  template:
+    src: config.ini_oracle.j2
+    dest: "../microservices/generator-ms/adapter/NVSK/config.ini"
+  when: access_type == "NVSK"
+  tags: [ install, update ]
+
