--- a/ansible/roles/generator/tasks/configure_generator.yml
+++ b/ansible/roles/generator/tasks/configure_generator.yml
@@ -1,85 +1,57 @@
 - name: copying database config to generator folder (aws storage)
   template:
     src: config.ini_aws.j2
-    dest: "../microservices/generator-ms/adapter/config.ini"
-  when: storage_type == "aws"
+    dest: "../microservices/generator-ms/adapter/VSk/config.ini"
+  when: (storage_type == "aws") or (access_type == "VSK")
   tags: [ install, update ]
 
-- name: copying database config to generator folder (aws storage)
-  template:
-    src: config.ini_aws.j2
-    dest: "../microservices/generator-ms/adapter/VSK/config.ini"
-  when: access_type == "VSK"
-  tags: [ install, update ]
 
 - name: copying database config to generator folder (aws storage)
   template:
     src: config.ini_aws.j2
     dest: "../microservices/generator-ms/adapter/NVSK/config.ini"
-  when: access_type == "NVSK"
+  when: (storage_type == "aws") or (access_type == "NVSK")
   tags: [ install, update ]
 
 
 - name: copying database config to generator folder (local storage)
   template:
     src: config.ini_local.j2
-    dest: "../microservices/generator-ms/adapter/config.ini"
-  when: storage_type == "local"
-  tags: [ install, update ]
-
-- name: copying database config to generator folder (local storage)
-  template:
-    src: config.ini_local.j2
     dest: "../microservices/generator-ms/adapter/VSK/config.ini"
-  when: access_type == "VSK"
+  when: (storage_type == "local") or (access_type == "VSK")
   tags: [ install, update ]
 
 - name: copying database config to generator folder (local storage)
   template:
     src: config.ini_local.j2
     dest: "../microservices/generator-ms/adapter/NVSK/config.ini"
-  when: access_type == "NVSK"
-  tags: [ install, update ]
-
-- name: copying database config to generator folder (azure storage)
-  template:
-    src: config.ini_azure.j2
-    dest: "../microservices/generator-ms/adapter/config.ini"
-  when: storage_type == "azure"
-  tags: [ install, update ]
-
-- name: copying database config to generator folder (azure storage)
-  template:
-    src: config.ini_azure.j2
-    dest: "../microservices/generator-ms/adapter/NVSK/config.ini"
-  when: access_type == "VSK"
+  when: (storage_type == "local") or (access_type == "NVSK")
   tags: [ install, update ]
 
 - name: copying database config to generator folder (azure storage)
   template:
     src: config.ini_azure.j2
     dest: "../microservices/generator-ms/adapter/VSK/config.ini"
-  when: access_type == "NVSK"
+  when: (storage_type == "azure") or (access_type == "VSK")
   tags: [ install, update ]
 
-- name: copying database config to generator folder (oracle storage)
+- name: copying database config to generator folder (azure storage)
   template:
-    src: config.ini_oracle.j2
-    dest: "../microservices/generator-ms/adapter/config.ini"
-  when: storage_type == "oracle"
+    src: config.ini_azure.j2
+    dest: "../microservices/generator-ms/adapter/NVSK/config.ini"
+  when: (storage_type == "azure") or (access_type == "NVSK")
   tags: [ install, update ]
 
 - name: copying database config to generator folder (oracle storage)
   template:
     src: config.ini_oracle.j2
     dest: "../microservices/generator-ms/adapter/VSK/config.ini"
-  when: access_type == "VSK"
+  when: (storage_type == "oracle") or (access_type == "VSK")
   tags: [ install, update ]
 
 - name: copying database config to generator folder (oracle storage)
   template:
     src: config.ini_oracle.j2
     dest: "../microservices/generator-ms/adapter/NVSK/config.ini"
-  when: access_type == "NVSK"
+  when: (storage_type == "oracle") or (access_type == "NVSK")
   tags: [ install, update ]
-
